ci: added IT tests